XX yyy 2007: 0.5.3 Miek <miek@miek.nl>
  -- cleanups --
  * Didn't use File::Copy::Recursive - so drop it
  * Small build updates, makedist.sh


20 Sep 2007: 0.5.2 Miek <miek@miek.nl>
  -- cleanups --
  * Fix the debian pkg - don't create /etc/rdup by default
  * rdup-purge add File::Path perl module
  * rdup-simple: enable -a (thanks to: Mathieu Chappuis)
  * Go back to plain manpages - rst isn't worth the trouble


23 Jun 2007: 0.5.1 Miek <miek@miek.nl>
  -- bug fix and feature enhancements --
  * rdup: Fix race condition with growing files and remote backups
  * Gnumakefile.in: Dont create unneed directories (Sven Hartrump) 
  * Documentation: moved to restructed text as the source for docs
    (work in progress)
  * Added: rdup-purge: logarithmic purge script (idea from simple-backup)


17 May 2007: 0.5.0 Miek <miek@miek.nl>
  -- major new release - not backwards compatible -
  * All paths have changed /usr/bin is now used, no more sbin
  * All manual pages now fall in the section 1, not 8
  * No more use of /etc/rdup, only ~/.rdup
  * rdup-snap-link is the only script that optionally will
    check /etc/rdup
  * rdup: use ctime not the mtime
  * rdup: major rewrite of the core algorithm, it now uses
    a remove-list, new-list and posibly changed list - 
    only items that are on the changed list are ctime checked.
  * rdup: much better algorithm for detecting incremental filesystem
    changes; directory renames are now detected
  * rdup: the internal filelist is extended with a device number
    and a inode number; these are needed to detect directory moves.
    switch
  * backup with: rdup-simple
  * restore with: rdup-restore
  * todo: rdup-restore in the same line as rdup-simple
  * todo: rdup-snapshot
  * Major rewrite of rdup-restore
  * Removed: rdup-dump, rdup-snapshot, rdup-mirror


09 May 2007: 0.3.9 Miek <miek@miek.nl>
  -- new features and fixes --
   * Add -S and -D to the known options of rdup-restore (reported by 
     Ben Coffey)